--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals": "^1.3.0",
+    "@tanstack/router": "^0.0.1-beta.53",
+    "idb-keyval": "^6.2.1",
+    "pako": "^2.1.0",
     "preact": "^10.24.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
+    "@types/pako": "^2.0.3",
     "typescript": "~5.6.2",
     "vite": "^5.4.9"
   }
