--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@preact/signals": "^1.3.0",
+    "@tanstack/react-router": "^1.77.6",
     "@tanstack/router": "^0.0.1-beta.53",
     "idb-keyval": "^6.2.1",
     "pako": "^2.1.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
+    "@tanstack/router-devtools": "^1.77.6",
     "@types/pako": "^2.0.3",
     "typescript": "~5.6.2",
     "vite": "^5.4.9"
