--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
     "@tanstack/router-devtools": "^1.77.6",
+    "@tanstack/router-plugin": "^1.76.4",
     "@types/pako": "^2.0.3",
     "typescript": "~5.6.2",
     "vite": "^5.4.9"
