--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@preact/signals": "^1.3.0",
@@ -20,8 +22,11 @@
     "@preact/preset-vite": "^2.9.1",
     "@tanstack/router-devtools": "^1.77.6",
     "@tanstack/router-plugin": "^1.76.4",
+    "@testing-library/jest-dom": "^6.6.2",
     "@types/pako": "^2.0.3",
+    "@vitest/coverage-v8": "^2.1.4",
     "typescript": "~5.6.2",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vitest": "^2.1.4"
   }
 }
