--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@tanstack/router-devtools": "^1.77.6",
     "@tanstack/router-plugin": "^1.76.4",
     "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/preact": "^3.2.4",
     "@types/pako": "^2.0.3",
     "@vitest/coverage-v8": "^2.1.4",
+    "jsdom": "^25.0.1",
     "typescript": "~5.6.2",
     "vite": "^5.4.9",
     "vitest": "^2.1.4"
