--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/router-plugin": "^1.76.4",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/preact": "^3.2.4",
+    "@testing-library/user-event": "^14.5.2",
     "@types/pako": "^2.0.3",
     "@vitest/coverage-v8": "^2.1.4",
     "jsdom": "^25.0.1",
