--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,12 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable",
+      "es2022.error"
+    ],
     "skipLibCheck": true,
     "paths": {
       "react": ["./node_modules/preact/compat/"],
