--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/preact": "^3.2.4",
     "@testing-library/user-event": "^14.5.2",
     "@types/pako": "^2.0.3",
+    "@types/react-dom": "^18.3.1",
     "@vitest/coverage-v8": "^2.1.4",
     "jsdom": "^25.0.1",
     "typescript": "~5.6.2",
