--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build && tsc -b",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "lint": "eslint . --format json --output-file eslint_report.json",
+    "lint:fix": "eslint . --fix",
+    "lint:report": "eslint . --format stylish"
   },
   "dependencies": {
     "@preact/signals": "^1.3.0",
@@ -20,6 +23,7 @@
     "preact": "^10.24.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@preact/preset-vite": "^2.9.1",
     "@tanstack/router-devtools": "^1.77.6",
     "@tanstack/router-plugin": "^1.76.4",
@@ -28,9 +32,18 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/pako": "^2.0.3",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@vitest/coverage-v8": "^2.1.4",
+    "eslint": "^9.14.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "globals": "^15.12.0",
     "jsdom": "^25.0.1",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.13.0",
     "vite": "^5.4.9",
     "vitest": "^2.1.4"
   }
