--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^22.9.0",
     "@types/pako": "^2.0.3",
     "@types/react-dom": "^18.3.1",
+    "@types/rollup-plugin-visualizer": "^4.2.4",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "@vitest/coverage-v8": "^2.1.4",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.12.0",
     "jsdom": "^25.0.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
     "vite": "^5.4.9",
