--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "dependencies": {
     "@preact/signals": "^1.3.0",
     "@tanstack/react-router": "^1.77.6",
+    "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.454.0",
-    "pako": "^2.1.0",
     "preact": "^10.24.3"
   },
   "devDependencies": {
@@ -33,7 +33,6 @@
     "@testing-library/preact": "^3.2.4",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.9.0",
-    "@types/pako": "^2.0.3",
     "@types/react-dom": "^18.3.1",
     "@types/rollup-plugin-visualizer": "^4.2.4",
     "@types/sharp": "^0.32.0",
