--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ dist-ssr
 *.sln
 *.sw?
 
+/.env.sentry-build-plugin
 /.envrc
 /.vite/
 /JUSTFILE_BRANCH
@@ -30,3 +31,6 @@ dist-ssr
 /stats.html
 /tsconfig.app.tsbuildinfo
 /tsconfig.node.tsbuildinfo
+
+# Sentry Config File
+.env.sentry-build-plugin
