--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@preact/signals": "^1.3.0",
+    "@sentry/react": "^8.38.0",
+    "@sentry/vite-plugin": "^2.22.6",
     "@tanstack/react-router": "^1.77.6",
     "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
