--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "@cloudflare/workers-types": "^4.20250407.0",
     "@eslint/compat": "^1.2.8",
     "@eslint/js": "^9.23.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@tanstack/router-cli": "^1.115.0",
+    "@playwright/test": "^1.51.1",
     "@tanstack/react-router-devtools": "^1.115.0",
+    "@tanstack/router-cli": "^1.115.0",
     "@tanstack/router-plugin": "^1.115.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^19.1.0",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@types/rollup-plugin-visualizer": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^3.1.1",
     "eslint": "^9.24.0",
     "eslint-plugin-import": "^2.31.0",
