--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@preact/signals": "^1.3.1",
     "@sentry/react": "^8.41.0",
     "@sentry/vite-plugin": "^2.22.6",
+    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query-devtools": "^5.62.0",
     "@tanstack/react-router": "^1.84.0",
     "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
