--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.16.0",
     "vite": "^6.0.1",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.4",
+    "wrangler": "^3.91.0"
   }
 }
