Set up a CORS proxy as a Cloudflare function.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ dist-ssr
 /coverage
 /stats.html
 /tsconfig.app.tsbuildinfo
+/tsconfig.eslint.tsbuildinfo
 /tsconfig.node.tsbuildinfo
 
 # wrangler files
