--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "test:coverage": "vitest run --coverage",
     "generate:routes": "npx @tanstack/router-cli generate-routefiles",
     "build:types": "npm run generate:routes && tsc --noEmit --project tsconfig.routes.json",
-    "lint:fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" && eslint . --fix",
-
+    "lint:fix": "prettier --write \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\" && eslint .",
     "ci:eslint": "eslint . --format json --output-file eslint_report.json",
-    "ci:prettier": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "ci:prettier": "prettier --check \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\"",
     "ci:typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -30,6 +29,8 @@
     "preact": "^10.25.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241127.0",
+    "@eslint/compat": "^1.2.3",
     "@eslint/js": "^9.15.0",
     "@preact/preset-vite": "^2.9.2",
     "@tanstack/router-cli": "^1.84.4",
@@ -57,7 +58,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.16.0",
     "vite": "^6.0.1",
-    "vitest": "^2.1.4",
+    "vitest": "^2.1.6",
     "wrangler": "^3.91.0"
   }
 }
