--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "optimize:images": "tsx scripts/optimizeImages.ts",
     "prebuild": "npm run optimize:images",
-    "build": "vite build && tsc -b",
-    "preview": "vite preview",
+    "build": "vite build",
     "test": "vitest",
-    "coverage": "vitest run --coverage",
-    "lint": "eslint . --format json --output-file eslint_report.json",
+    "test:coverage": "vitest run --coverage",
+    "generate:routes": "npx @tanstack/router-cli generate-routefiles",
+    "build:types": "npm run generate:routes && tsc --noEmit --project tsconfig.routes.json",
     "lint:fix": "eslint . --fix",
-    "lint:report": "eslint . --format stylish",
-    "typecheck": "tsc --noEmit"
+    "ci:lint": "eslint . --format json --output-file eslint_report.json",
+    "ci:typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@preact/signals": "^1.3.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@preact/preset-vite": "^2.9.2",
+    "@tanstack/router-cli": "^1.84.4",
     "@tanstack/router-devtools": "^1.85.0",
     "@tanstack/router-plugin": "^1.84.4",
     "@testing-library/jest-dom": "^6.6.3",
