--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:coverage": "vitest run --coverage",
     "generate:routes": "npx @tanstack/router-cli generate-routefiles",
     "build:types": "npm run generate:routes && tsc --noEmit --project tsconfig.routes.json",
-    "lint:fix": "prettier --write \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\" && eslint .",
+    "lint:fix": "prettier --write \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\" && eslint . --fix",
     "ci:eslint": "eslint . --format json --output-file eslint_report.json",
     "ci:prettier": "prettier --check \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\"",
     "ci:typecheck": "tsc --noEmit"
