--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.479.0",
-    "preact": "^10.26.4"
+    "preact": "^10.26.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250313.0",
