--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-query-devtools": "^5.74.4",
     "@tanstack/react-router": "^1.116.0",
+    "date-fns": "^4.1.0",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "fflate": "^0.8.2",
     "lucide-react": "^0.492.0",
     "react": "^19.1.0",
