--- a/package.json
+++ b/package.json
@@ -19,27 +19,28 @@
     "all": "npm run lint:fix && npm run ci:typecheck && npm run build && npm run ci:test"
   },
   "dependencies": {
-    "@preact/signals": "^2.0.2",
     "@tanstack/react-query": "^5.71.1",
     "@tanstack/react-query-devtools": "^5.71.1",
     "@tanstack/react-router": "^1.114.29",
     "fflate": "^0.8.2",
     "idb-keyval": "^6.2.1",
     "lucide-react": "^0.485.0",
-    "preact": "^10.26.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250327.0",
     "@eslint/compat": "^1.2.7",
     "@eslint/js": "^9.23.0",
-    "@preact/preset-vite": "^2.10.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "@tanstack/router-cli": "^1.114.29",
     "@tanstack/react-router-devtools": "^1.114.29",
     "@tanstack/router-plugin": "^1.114.30",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/preact": "^3.2.4",
+    "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.0.12",
     "@types/node": "^22.13.14",
     "@types/react-dom": "^19.0.4",
     "@types/rollup-plugin-visualizer": "^5.0.3",
