Add route generation step to CI workflow.

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,6 +20,9 @@ jobs:
 
       - run: npm ci
 
+      - name: Generate routes
+        run: npm run generate:routes
+
       - run: npm run ci:eslint
         continue-on-error: true
 
