--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-router-devtools": "^1.115.0",
     "@tanstack/router-cli": "^1.115.0",
     "@tanstack/router-plugin": "^1.115.0",
+    "@tanstack/eslint-plugin-router": "^1.114.29",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
