--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-query-devtools": "^5.74.4",
     "@tanstack/react-router": "^1.116.0",
+    "@tanstack/react-store": "^0.7.0",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
@@ -36,10 +37,10 @@
     "@eslint/compat": "^1.2.8",
     "@eslint/js": "^9.23.0",
     "@playwright/test": "^1.52.0",
+    "@tanstack/eslint-plugin-router": "^1.114.29",
     "@tanstack/react-router-devtools": "^1.116.0",
     "@tanstack/router-cli": "^1.116.0",
     "@tanstack/router-plugin": "^1.116.1",
-    "@tanstack/eslint-plugin-router": "^1.114.29",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
