--- a/.prettierrc.json5
+++ b/.prettierrc.json5
@@ -18,16 +18,16 @@
   // Print trailing commas wherever possible in multi-line comma-separated structures
   // Default: "es5"
   // Options: "none" | "es5" | "all"
-   "trailingComma": "all",
+  "trailingComma": "all",
 
   // Print spaces between brackets in object literals
   // Default: true
-   "bracketSpacing": false,
+  "bracketSpacing": false,
 
   // Include parentheses around a sole arrow function parameter
   // Default: "always"
   // Options: "avoid" | "always"
-  // "arrowParens": "avoid",
+  "arrowParens": "always",
 
   // Line length where Prettier will try to wrap
   // Default: 80
