--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
       hooks:
           - id: prettier
             types_or: [json, yaml, markdown]
-            exclude: "package-lock\\.json"
+            exclude: "package(-lock)?\\.json"
     - repo: https://github.com/pre-commit/mirrors-eslint
       rev: v9.23.0
       hooks:
