--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,60 +1,60 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "daily"
-      time: "08:00"
-      timezone: "America/New_York"
-    open-pull-requests-limit: 25
-    groups:
-      # Group all TypeScript-related updates together
-      typescript-ecosystem:
-        patterns:
-          - "typescript"
-          - "@types/*"
-          - "@typescript-eslint/*"
-      # Group Preact/React-related updates
-      react-ecosystem:
-        patterns:
-          - "preact"
-          - "@preact/*"
-          - "react"
-          - "@types/react*"
-      # Group Vite-related updates
-      vite-ecosystem:
-        patterns:
-          - "vite"
-          - "@vitejs/*"
-      # Group testing-related updates
-      testing:
-        patterns:
-          - "vitest"
-          - "@vitest/*"
-          - "@testing-library/*"
-          - "playwright"
-      # Group TanStack-related updates
-      tanstack:
-        patterns:
-          - "@tanstack/*"
-    commit-message:
-      prefix: "chore"
-      prefix-development: "chore"
-      include: "scope"
+    - package-ecosystem: 'npm'
+      directory: '/'
+      schedule:
+          interval: 'daily'
+          time: '08:00'
+          timezone: 'America/New_York'
+      open-pull-requests-limit: 25
+      groups:
+          # Group all TypeScript-related updates together
+          typescript-ecosystem:
+              patterns:
+                  - 'typescript'
+                  - '@types/*'
+                  - '@typescript-eslint/*'
+          # Group Preact/React-related updates
+          react-ecosystem:
+              patterns:
+                  - 'preact'
+                  - '@preact/*'
+                  - 'react'
+                  - '@types/react*'
+          # Group Vite-related updates
+          vite-ecosystem:
+              patterns:
+                  - 'vite'
+                  - '@vitejs/*'
+          # Group testing-related updates
+          testing:
+              patterns:
+                  - 'vitest'
+                  - '@vitest/*'
+                  - '@testing-library/*'
+                  - 'playwright'
+          # Group TanStack-related updates
+          tanstack:
+              patterns:
+                  - '@tanstack/*'
+      commit-message:
+          prefix: 'chore'
+          prefix-development: 'chore'
+          include: 'scope'
 
-  # GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "daily"
-      time: "08:00"
-      timezone: "America/New_York"
-    open-pull-requests-limit: 25
-    commit-message:
-      prefix: "ci"
-      include: "scope"
-    groups:
-      # Group all GitHub Actions updates together
-      actions:
-        patterns:
-          - "*"
+    # GitHub Actions
+    - package-ecosystem: 'github-actions'
+      directory: '/'
+      schedule:
+          interval: 'daily'
+          time: '08:00'
+          timezone: 'America/New_York'
+      open-pull-requests-limit: 25
+      commit-message:
+          prefix: 'ci'
+          include: 'scope'
+      groups:
+          # Group all GitHub Actions updates together
+          actions:
+              patterns:
+                  - '*'
