--- a/tsconfig.functions.json
+++ b/tsconfig.functions.json
@@ -1,16 +1,10 @@
 {
-  "extends": "./tsconfig.app.json",
-  "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "lib": [
-      "esnext",
-      "webworker",
-      "dom"
-    ],
-    "types": ["@cloudflare/workers-types"]
-  },
-  "include": [
-    "functions/**/*.ts"
-  ],
+	"extends": "./tsconfig.app.json",
+	"compilerOptions": {
+		"target": "esnext",
+		"module": "esnext",
+		"lib": ["esnext", "webworker", "dom"],
+		"types": ["@cloudflare/workers-types"]
+	},
+	"include": ["functions/**/*.ts"]
 }
