--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.functions.json" },
-  ]
+	"files": [],
+	"references": [
+		{"path": "./tsconfig.app.json"},
+		{"path": "./tsconfig.node.json"},
+		{"path": "./tsconfig.functions.json"}
+	]
 }
