--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,57 +4,45 @@ updates:
       directory: '/'
       schedule:
           interval: 'daily'
-          time: '08:00'
+          time: '07:00'
           timezone: 'America/New_York'
       open-pull-requests-limit: 25
       groups:
-          # Group all TypeScript-related updates together
           typescript-ecosystem:
               patterns:
                   - 'typescript'
-                  - '@types/*'
                   - '@typescript-eslint/*'
-          # Group Preact/React-related updates
           react-ecosystem:
               patterns:
                   - 'preact'
                   - '@preact/*'
                   - 'react'
                   - '@types/react*'
-          # Group Vite-related updates
           vite-ecosystem:
               patterns:
                   - 'vite'
                   - '@vitejs/*'
-          # Group testing-related updates
           testing:
               patterns:
                   - 'vitest'
                   - '@vitest/*'
                   - '@testing-library/*'
                   - 'playwright'
-          # Group TanStack-related updates
           tanstack:
               patterns:
                   - '@tanstack/*'
       commit-message:
-          prefix: 'chore'
-          prefix-development: 'chore'
+          prefix: 'dependabot'
+          prefix-development: 'dependabot'
           include: 'scope'
 
-    # GitHub Actions
     - package-ecosystem: 'github-actions'
       directory: '/'
       schedule:
           interval: 'daily'
-          time: '08:00'
+          time: '07:00'
           timezone: 'America/New_York'
       open-pull-requests-limit: 25
       commit-message:
-          prefix: 'ci'
+          prefix: 'dependabot'
           include: 'scope'
-      groups:
-          # Group all GitHub Actions updates together
-          actions:
-              patterns:
-                  - '*'
