--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"date-fns": "^4.1.0",
 		"dexie": "^4.2.1",
 		"dexie-react-hooks": "^4.2.0",
+		"fast-deep-equal": "^3.1.3",
 		"fflate": "^0.8.2",
 		"lucide-react": "^0.562.0",
 		"react": "^19.2.3",
