--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,10 +6,8 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    eslint:
-        permissions:
-            pull-requests: read
-            checks: write
+    lint:
+        name: Lint (Biome)
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -22,12 +20,10 @@ jobs:
 
             - run: npx @tanstack/router-cli generate --routesDirectory ./src/routes --generatedRouteTree ./src/routeTree.gen.ts
 
-            - run: npm run ci:eslint
-              continue-on-error: true
+            - run: npm run ci:lint
 
-            - uses: ataylorme/eslint-annotate-action@v3
-
-    prettier:
+    format:
+        name: Format (Biome)
         runs-on: ubuntu-latest
 
         steps:
@@ -39,7 +35,7 @@ jobs:
 
             - run: npm ci
 
-            - run: npm run ci:prettier
+            - run: npm run ci:format
 
     typecheck:
         name: Type Check
@@ -145,7 +141,7 @@ jobs:
 
     all-checks:
         name: All checks
-        needs: [eslint, prettier, typecheck, test, coverage, build, build-types]
+        needs: [lint, format, typecheck, test, coverage, build, build-types]
         runs-on: ubuntu-latest
         steps:
             - name: All checks passed
