--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test:coverage": "vitest run --coverage",
     "generate:routes": "npx @tanstack/router-cli generate",
     "build:types": "npm run generate:routes && tsc --noEmit --project tsconfig.routes.json",
-    "lint:fix": "prettier --write \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\" && eslint . --fix",
+    "lint:fix": "npx @biomejs/biome check --write .",
     "ci:test": "vitest run",
-    "ci:eslint": "eslint . --format json --output-file eslint_report.json",
-    "ci:prettier": "prettier --check \"{src,functions}/**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "ci:lint": "npx @biomejs/biome lint .",
+    "ci:format": "npx @biomejs/biome format .",
+    "format:css": "npx prettier --write \"src/**/*.css\"",
     "ci:typecheck": "tsc --noEmit",
     "all": "npm run generate:routes && npm run lint:fix && npm run ci:typecheck && npm run build && npm run ci:test"
   },
@@ -34,12 +35,10 @@
     "zod": "^3.25.64"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@cloudflare/workers-types": "^4.20250613.0",
-    "@eslint/compat": "^1.3.0",
-    "@eslint/js": "^9.28.0",
     "@playwright/test": "^1.53.0",
     "@tanstack/eslint-plugin-router": "^1.120.17",
-    "@tanstack/react-router-devtools": "^1.121.8",
     "@tanstack/router-cli": "^1.121.9",
     "@tanstack/router-plugin": "^1.121.9",
     "@testing-library/jest-dom": "^6.6.3",
@@ -48,21 +47,14 @@
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
     "@vitejs/plugin-react": "^4.5.2",
     "@vitest/coverage-v8": "^3.2.3",
-    "eslint": "^9.28.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "fake-indexeddb": "^6.0.1",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "sharp": "^0.34.2",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
     "vitest": "^3.0.2",
     "wrangler": "^4.20.0"
