Replace +new Date() with Date.now() and re-enable useDateNow rule.

--- a/biome.json
+++ b/biome.json
@@ -40,8 +40,7 @@
 				"noUselessTypeConstraint": "error",
 				"noForEach": "off",
 				"noStaticOnlyClass": "off",
-				"noThisInStatic": "off",
-				"useDateNow": "off"
+				"noThisInStatic": "off"
 			},
 			"correctness": {
 				"noConstAssign": "error",
