Fix CSS specificity in main.css and re-enable noDescendingSpecificity rule.

--- a/biome.json
+++ b/biome.json
@@ -79,8 +79,7 @@
 				"useTemplate": "off",
 				"useNodejsImportProtocol": "off",
 				"noUselessElse": "off",
-				"noNonNullAssertion": "off",
-				"noDescendingSpecificity": "off"
+				"noNonNullAssertion": "off"
 			},
 			"nursery": {
 				"noNestedComponentDefinitions": "off",
