--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.0.4/schema.json",
 	"files": {
 		"includes": ["src/**/*", "functions/**/*", "test/**/*"],
 		"experimentalScannerIgnores": [
@@ -14,6 +14,11 @@
 			"src/routeTree.gen.ts"
 		],
 		"ignoreUnknown": true
+	},
+	"css": {
+		"linter": {
+			"enabled": false
+		}
 	},
 	"formatter": {
 		"enabled": true,
@@ -31,7 +36,8 @@
 				"useKeyWithClickEvents": "off",
 				"useButtonType": "off",
 				"noLabelWithoutControl": "off",
-				"noStaticElementInteractions": "off"
+				"noStaticElementInteractions": "off",
+				"noNoninteractiveTabindex": "off"
 			},
 			"complexity": {
 				"noExtraBooleanCast": "error",
