Re-enable all Biome linting rules and fix violations.

--- a/biome.json
+++ b/biome.json
@@ -36,7 +36,6 @@
 				"useKeyWithClickEvents": "off",
 				"useButtonType": "off",
 				"noLabelWithoutControl": "off",
-				"noStaticElementInteractions": "off",
 				"noNoninteractiveTabindex": "off"
 			},
 			"complexity": {
@@ -68,7 +67,6 @@
 				"noUnsafeOptionalChaining": "error",
 				"noUnusedLabels": "error",
 				"noUnusedVariables": "error",
-				"noUnusedImports": "off",
 				"useIsNan": "error",
 				"useValidForDirection": "error",
 				"useYield": "error",
@@ -86,9 +84,6 @@
 				"useNodejsImportProtocol": "off",
 				"noUselessElse": "off",
 				"noNonNullAssertion": "off"
-			},
-			"nursery": {
-				"noNestedComponentDefinitions": "off"
 			},
 			"suspicious": {
 				"noAsyncPromiseExecutor": "error",
@@ -146,6 +141,10 @@
 				"rules": {
 					"suspicious": {
 						"noExplicitAny": "off"
+					},
+					"a11y": {
+						"noStaticElementInteractions": "off",
+						"useSemanticElements": "off"
 					}
 				}
 			}
