Enable noDescendingSpecificity rule and fix CSS violations.

--- a/biome.json
+++ b/biome.json
@@ -86,7 +86,8 @@
 				"useTemplate": "off",
 				"useNodejsImportProtocol": "off",
 				"noUselessElse": "off",
-				"noNonNullAssertion": "off"
+				"noNonNullAssertion": "off",
+				"noDescendingSpecificity": "error"
 			},
 			"nursery": {
 				"noNestedComponentDefinitions": "off"
