Enable noStaticElementInteractions rule and fix violations.

--- a/biome.json
+++ b/biome.json
@@ -36,7 +36,7 @@
 				"useKeyWithClickEvents": "off",
 				"useButtonType": "off",
 				"noLabelWithoutControl": "off",
-				"noStaticElementInteractions": "off",
+				"noStaticElementInteractions": "error",
 				"noNoninteractiveTabindex": "off"
 			},
 			"complexity": {
