--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
 	"files": {
 		"includes": ["src/**/*", "functions/**/*", "test/**/*"],
 		"experimentalScannerIgnores": [
@@ -37,7 +37,7 @@
 				"useButtonType": "off",
 				"noLabelWithoutControl": "off",
 				"noStaticElementInteractions": "error",
-				"noNoninteractiveTabindex": "off"
+				"noNoninteractiveTabindex": "error"
 			},
 			"complexity": {
 				"noExtraBooleanCast": "error",
