Enable useButtonType rule and add explicit button types.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -34,7 +34,7 @@
 			"recommended": true,
 			"a11y": {
 				"useKeyWithClickEvents": "error",
-				"useButtonType": "off",
+				"useButtonType": "error",
 				"noLabelWithoutControl": "off",
 				"noStaticElementInteractions": "error",
 				"noNoninteractiveTabindex": "error"
