--- a/biome.jsonc
+++ b/biome.jsonc
@@ -45,7 +45,7 @@
 				"noUselessCatch": "error",
 				"noUselessTypeConstraint": "error",
 				"noForEach": "off",
-				"noStaticOnlyClass": "off",
+				"noStaticOnlyClass": "error",
 				"noThisInStatic": "off",
 				"useDateNow": "error"
 			},
