--- a/.github/workflows/merge-group.yml
+++ b/.github/workflows/merge-group.yml
@@ -1,7 +1,12 @@
-# Jobs that run on pull_request, but not on merge_group. This is useful for jobs that post comments on Pull Requests, like ESLint annotations.
+# Jobs that run on merge_group, meaning they must pass before changes land. They also run on pull_request.
 
 on:
     pull_request:
+    merge_group:
+
+concurrency:
+    group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+    cancel-in-progress: true
 
 jobs:
     lint:
@@ -91,7 +96,6 @@ jobs:
             - run: npm run test:coverage
 
             - name: Upload coverage report
-              if: matrix.node-version == '22.x'
               uses: actions/upload-artifact@v5
               with:
                   name: coverage-report
@@ -147,17 +151,3 @@ jobs:
         steps:
             - name: All checks passed
               run: echo "All checks passed!"
-
-    automerge-dependabot:
-        if: github.event.pull_request.user.login == 'dependabot[bot]'
-        runs-on: ubuntu-latest
-        permissions:
-            pull-requests: write
-            contents: write
-        steps:
-            - uses: actions/checkout@v6
-
-            - name: Enable auto-merge for Dependabot PR
-              run: gh pr merge --rebase --auto "${{ github.event.pull_request.number }}"
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
