--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -59,6 +59,7 @@ jobs:
     test:
         name: Test (Node ${{ matrix.node-version }})
         runs-on: ubuntu-latest
+        timeout-minutes: 10
         strategy:
             matrix:
                 node-version: [21.x, 22.x]
@@ -74,10 +75,11 @@ jobs:
 
             - run: npm ci
 
-            - run: npm test
+            - run: npm run ci:test
 
     coverage:
         runs-on: ubuntu-latest
+        timeout-minutes: 10
         steps:
             - uses: actions/checkout@v5
 
@@ -100,6 +102,7 @@ jobs:
 
     build:
         runs-on: ubuntu-latest
+        timeout-minutes: 10
         steps:
             - uses: actions/checkout@v5
             - uses: actions/setup-node@v6
