Fix CSS shorthand property overrides and enable Biome rule.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -137,7 +137,7 @@
 				"noGlobalIsNan": "off",
 				"noImplicitAnyLet": "error",
 				"noAssignInExpressions": "error",
-				"noShorthandPropertyOverrides": "off"
+				"noShorthandPropertyOverrides": "error"
 			}
 		}
 	},
