--- a/.github/workflows/merge-group.yml
+++ b/.github/workflows/merge-group.yml
@@ -144,9 +144,23 @@ jobs:
 
             - run: npm run build:types
 
+    pre-commit:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v6
+            - uses: actions/setup-python@v6
+              with:
+                  python-version: "3.x"
+            - uses: actions/setup-node@v6
+              with:
+                  node-version: '22.x'
+                  cache: 'npm'
+            - run: npm ci
+            - uses: pre-commit/action@v3.0.1
+
     all-checks:
         name: All checks
-        needs: [lint, format, typecheck, test, coverage, build, build-types]
+        needs: [lint, format, typecheck, test, coverage, build, build-types, pre-commit]
         runs-on: ubuntu-latest
         steps:
             - name: All checks passed
