--- a/.github/workflows/merge-group.yml
+++ b/.github/workflows/merge-group.yml
@@ -151,10 +151,7 @@ jobs:
             - uses: actions/setup-python@v6
               with:
                   python-version: "3.x"
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
             - run: npm ci
             - uses: pre-commit/action@v3.0.1
 
