--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,10 +13,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -30,10 +27,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -44,10 +38,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - name: Install dependencies
               run: npm ci
@@ -84,18 +75,13 @@ jobs:
         timeout-minutes: 10
         steps:
             - uses: actions/checkout@v6
-
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
             - run: npm run test:coverage
 
             - name: Upload coverage report
-              if: matrix.node-version == '22.x'
               uses: actions/upload-artifact@v5
               with:
                   name: coverage-report
@@ -107,10 +93,7 @@ jobs:
         timeout-minutes: 10
         steps:
             - uses: actions/checkout@v6
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -131,11 +114,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v6
-
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - run: npm ci
 
@@ -178,10 +157,7 @@ jobs:
                   repository: ${{ github.event.pull_request.head.repo.full_name }}
                   token: ${{ secrets.GITHUB_TOKEN }}
 
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - name: Configure Git
               run: |
@@ -219,10 +195,7 @@ jobs:
                   repository: ${{ github.event.pull_request.head.repo.full_name }}
                   token: ${{ secrets.GITHUB_TOKEN }}
 
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - name: Configure Git
               run: |
@@ -260,10 +233,7 @@ jobs:
                   repository: ${{ github.event.pull_request.head.repo.full_name }}
                   token: ${{ secrets.GITHUB_TOKEN }}
 
-            - uses: actions/setup-node@v6
-              with:
-                  node-version: '22.x'
-                  cache: 'npm'
+            - uses: jdx/mise-action@v3
 
             - name: Configure Git
               run: |
