--- a/.github/workflows/merge-group.yml
+++ b/.github/workflows/merge-group.yml
@@ -157,14 +157,10 @@ jobs:
 
     all-checks:
         name: All checks
-        if: always()
+        if: ${{ !cancelled() }}
         needs: [lint, format, typecheck, test, coverage, build, build-types, pre-commit]
         runs-on: ubuntu-latest
         steps:
-            - name: Verify all checks passed
-              run: |
-                  if [[ "${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}" == "true" ]]; then
-                    echo "One or more required checks failed or were cancelled"
-                    exit 1
-                  fi
-                  echo "All checks passed!"
+            - uses: re-actors/alls-green@release/v1
+              with:
+                  jobs: ${{ toJSON(needs) }}
